library/pod-security-policy/capabilities/samples/capabilities-demo/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: capabilities-demo
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "kube-system"
      - "kube-bench-gke-job"
      - "falco"
  parameters:
    allowedCapabilities: ["*"]
