library/pod-security-policy/capabilities/samples/capabilities-demo/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: capabilities
tests:
  - name: capabilities
    template: template.yaml
    constraint: samples/capabilities-demo/constraint.yaml
